--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -7,7 +7,43 @@
     <% include ../includes/header %>
   </header>
   <main>
-    <h1>Content here</h1>
+    <h1>Just another todo list</h1>
+    <form id='item-form' class="item-form item-form--add-item">
+      <input type="text" id="item-form__content" required />
+      <button class="item-form__button"></button>
+    </form>
+
+    <ul class="list">
+      <% for(var i = 0; i < items.length; i++) { %>
+        <li class="list__item" id="list__item-<%= items[i].id %>" is-complete="<%= items[i].isComplete %>">
+          <div class="list__item__content">
+            <%= items[i].content %>
+          </div>
+          <div class="list__item__settings-icon">icon</div>
+          <div class="settings-widget" data-id="<%= items[i].id %>">
+            <a class="settings-widget__delete">Delete</a>
+            <a class="settings-widget__edit">Edit</a>
+          </div>
+        </li>
+      <% } %>
+    </ul>
   </main>
+  
+  <script id="template__list-item" type="text/x-handlebars-template">
+        <li class="list__item" id="list__item-{{ id }}" is-complete="{{ isComplete }}">
+          <div class="list__item__content">
+            {{ content }}
+          </div>
+          <div class="list__item__settings-icon">icon</div>
+          <div class="settings-widget" data-id="{{ id }}">
+            <a class="settings-widget__delete">Delete</a>
+            <a class="settings-widget__edit">Edit</a>
+          </div>
+        </li>
+  </script>
+
+  <script src="scripts/handlebars-4.0.5.min.js"></script>
+  <script src="/scripts/jquery-v3.1.0.min.js"></script>
+  <script src="/scripts/main.js"></script>
 </body>
 </html>
