--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -7,7 +7,7 @@
     <% include ../includes/header %>
   </header>
   <main>
-    <h1>Just another todo list</h1>
+    <h1>Todo</h1>
     <form id='item-form' type="add" class="item-form item-form--add-item">
       <input type="text" id="item-form__content" required />
       <button class="item-form__button"></button>
