Added cancel button

--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -11,6 +11,7 @@
     <form id='item-form' type="add" class="item-form item-form--add-item">
       <input type="text" id="item-form__content" required />
       <button class="item-form__button"></button>
+      <a class="item-form__cancel">cancel</button>
     </form>
 
     <ul class="list">
